test/spec_vectors/struct/fail/module_4.wat
(module (type (struct (field (mut (ref 1))))))